--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05tut",
+  "name": "node_web_server_fork",
   "version": "1.0.0",
   "description": "Node.js Web Server tutorial",
   "main": "server.js",
@@ -7,13 +7,13 @@
     "start": "node server",
     "dev": "nodemon server"
   },
-  "author": "Dave Gray",
-  "license": "ISC",
-  "dependencies": {
-    "date-fns": "^2.23.0",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  }
+  "author": "Chinweike",
+    "license": "ISC",
+    "dependencies": {
+      "date-fns": "^3.6.0",
+      "uuid": "^10.0.0"
+    },
+    "devDependencies": {
+      "nodemon": "^3.1.3"
+    }
 }
