--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "node_web_server_fork",
+  "name": "Express_js",
   "version": "1.0.0",
-  "description": "Node.js Web Server tutorial",
+  "description": "Express_js Web Server tutorial",
   "main": "server.js",
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
   },
   "author": "Chinweike",
-    "license": "ISC",
-    "dependencies": {
-      "date-fns": "^3.6.0",
-      "uuid": "^10.0.0"
-    },
-    "devDependencies": {
-      "nodemon": "^3.1.3"
-    }
+  "license": "ISC",
+  "dependencies": {
+    "date-fns": "^3.6.0",
+    "express": "^4.19.2",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
+  }
 }
